--- a/main.html
+++ b/main.html
@@ -128,6 +128,35 @@
             .card-grid{grid-template-columns:repeat(2,1fr)}
             .cat-grid{grid-template-columns:repeat(3,1fr)}
         }
+
+        /* ==== 공통 우측 사용자 메뉴 (텍스트 2 + 노란 pill 1) ==== */
+        .user-menu{
+            display:flex; align-items:center; gap:14px; margin-left:auto;
+        }
+
+        /* 기본 텍스트 링크(마이페이지/장바구니) */
+        .user-menu .user-link{
+            display:inline-block;
+            font-weight:700;
+            color:#333;
+            text-decoration:none;
+            padding:6px 8px;
+        }
+        .user-menu .user-link:hover{ color:var(--color-primary); }
+
+        /* 로그인만 노란 pill 버튼 */
+        .user-menu .user-link.pill{
+            border:2px solid var(--color-accent);      /* 노란 테두리 */
+            color:var(--color-accent);
+            background:#fff;
+            padding:6px 14px;
+            border-radius:20px;
+        }
+        .user-menu .user-link.pill:hover{
+            background:var(--color-accent);
+            color:#fff;
+        }
+
     </style>
 </head>
 <body>
@@ -149,15 +178,13 @@
                 <li role="none"><a role="menuitem" href="#">신간</a></li>
                 <li role="none"><a role="menuitem" href="#">국내도서</a></li>
                 <li role="none"><a role="menuitem" href="#">외국도서</a></li>
-                <li role="none"><a role="menuitem" href="#">eBook</a></li>
-                <li role="none"><a role="menuitem" href="#">이벤트</a></li>
             </ul>
         </nav>
 
         <div class="user-menu">
-            <a href="#" class="cart-link" title="장바구니로 이동">마이페이지 </a>
-            <a href="#" class="cart-link" title="장바구니로 이동"> 장바구니 </a>
-            <button type="button" class="login-btn-top">로그인</button>
+            <a class="user-link" href="./mypage.html">마이페이지</a>
+            <a class="user-link" href="./cart.html">장바구니</a>
+            <a class="user-link pill" href="./login.html">로그인</a>
         </div>
     </div>
 </header>
@@ -260,7 +287,9 @@
             <div class="card-grid" id="best-grid">
                 <!-- 샘플 카드 5개 -->
                 <article class="card">
-                    <div class="thumb">BOOK</div>
+                    <div class="thumb">
+                        <img src="./img/book2.jpeg" alt="트랜드 코리아 2026 표지">
+                    </div>
                     <div class="info">
                         <div class="title">트랜드 코리아 2026</div>
                         <div class="meta">김난도 외 · 2025</div>
@@ -268,7 +297,9 @@
                     </div>
                 </article>
                 <article class="card">
-                    <div class="thumb">BOOK</div>
+                    <div class="thumb">
+                        <img src="./img/book3.jpeg" alt="처음 만나는 양자의 세계 표지">
+                    </div>
                     <div class="info">
                         <div class="title">처음 만나는 양자의 세계</div>
                         <div class="meta">채은미 · 2025</div>
@@ -276,7 +307,9 @@
                     </div>
                 </article>
                 <article class="card">
-                    <div class="thumb">BOOK</div>
+                    <div class="thumb">
+                        <img src="./img/book4.jpeg" alt="대형주 추세추종 투자법칙 표지">
+                    </div>
                     <div class="info">
                         <div class="title">대형주 추세추종 투자법칙</div>
                         <div class="meta">이종호(전황) · 2025</div>
@@ -284,7 +317,9 @@
                     </div>
                 </article>
                 <article class="card">
-                    <div class="thumb">BOOK</div>
+                    <div class="thumb">
+                        <img src="./img/book5.jpeg" alt="위버맨쉬 표지">
+                    </div>
                     <div class="info">
                         <div class="title">위버맨쉬</div>
                         <div class="meta">프리드리히 니체 · 2025</div>
@@ -292,7 +327,9 @@
                     </div>
                 </article>
                 <article class="card">
-                    <div class="thumb">BOOK</div>
+                    <div class="thumb">
+                        <img src="./img/book6.jpeg" alt="박곰희 연금 부자수업 표지">
+                    </div>
                     <div class="info">
                         <div class="title">박곰희 연금 부자수업</div>
                         <div class="meta">박곰희 · 2025</div>
